omni/tests/goldens/types/undefined_ident_22.err
tests/goldens/types/undefined_ident_22.omni:1:20: error: undefined identifier "missing22"
     1 | let result22:int = missing22
       |                    ^^^^^^^^^
     2 | 
  hint: declare the variable with 'let missing22: <type> = <value>' or 'var missing22: <type> = <value>' before using it
