omni/tests/goldens/types/undefined_ident_22.omni
let result22:int = missing22
